[package]
name = "ztar-rod"
version = "0.1.0"
authors = ["alex (imalex.xyz)"]
edition = "2018"

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"
num_enum = "0.2.0"
itertools = "0.8.0"
pest = "2.1.1"
pest_derive = "2.1.0"
lazy_static = "1.3.0"
ascii = "0.9.1"
png = "0.14.1"
cgmath = "0.17.0"
glium = "0.25.1"
image = "0.21.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
xz2 = "0.1.6"

[profile.release]
opt-level = 'z'
#codegen-units = 1
panic = 'abort'
